Add stylized html and it's stuff

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,5 @@
+file.reference.healthAnalyzer-public_html=public_html
 file.reference.healthParser-public_html=public_html
 file.reference.healthParser-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.healthParser-public_html}
-test.folder=${file.reference.healthParser-test}
+site.root.folder=${file.reference.healthAnalyzer-public_html}
